...
        }}
      />
      <Tabs.Screen
        name="create"
        options={{
          title: 'Create Log',
          tabBarButtonTestID: 'tab-create-log',
          tabBarIcon: ({ color }) => (
            <PencilSimpleLineIcon color={color} size={28} />
          ),
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          title: 'Profile',
          tabBarButtonTestID: 'tab-profile',
          tabBarIcon: ({ color }) => (
            <UserIcon color={color} size={28} />
          ),
        }}
      />
    </Tabs>
...
